fix: fix form field spacing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -46,7 +46,7 @@ body {
   margin-right: auto;
 }
 
-#new-session .mdc-text-field {
+.form-field {
   margin: 10px 0px;
 }
 
